diary/core/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: core
    version: v1
  name: core-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core
  template:
    metadata:
      labels:
        app: core
        version: v1
    spec:
      restartPolicy: Always
      containers:
      - image: rasouza/diary-core
        name: core
        ports:
          - containerPort: 3001
        livenessProbe:
          initialDelaySeconds: 2
          periodSeconds: 10
          httpGet:
            path: /health
            port: 3001
  revisionHistoryLimit: 0
