diary/core/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: core
  name: core-svc
spec:
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app: core
